commit antes de ir
xd
