# src/modules/accounts/dtos/ICreateUserDTO.ts
@@ -1,6 +1,5 @@
 interface ICreateUserDTO {
 	name: string;
-	username: string;
 	email: string;
 	password: string;
 	driver_license: string;
