# src/modules/accounts/entities/User.ts
@@ -10,9 +10,6 @@ class User {
 	name: string;
 
 	@Column()
-	username: string;
-
-	@Column()
 	email: string;
 
 	@Column()
