# src/routes/index.ts
@@ -2,11 +2,17 @@ import { Router } from "express";
 
 import { categoriesRoutes } from "./categories.routes";
 import { specificationsRoutes } from "./specifications.routes";
+import { usersRoutes } from "./users.routes";
+import { authenticateRoutes } from "./authenticate.routes";
 
 const router = Router();
 
 router.use("/specifications", specificationsRoutes);
 
+router.use(authenticateRoutes);
+
 router.use("/categories", categoriesRoutes);
+
+router.use("/users", usersRoutes);
 
 export { router };
